# buzz

./: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  preview-features.json
.github/: CODEOWNERS
.github/workflows/: benchmark-harbor.yml  ci.yml  release.yml
.intersect/: sadscan.yaml
benchmarks/harbor-buzz-orchestra/: .gitignore  README.md  pyproject.toml
benchmarks/harbor-buzz-orchestra/forwarder/: relay_forwarder.rs
benchmarks/harbor-buzz-orchestra/manifests/: m1-hello-world.yaml  tb-cobol-sonnet-haiku.yaml
benchmarks/harbor-buzz-orchestra/personas/: orchestrator-m1.md  orchestrator-tb.md  worker-m1.md  worker-tb.md
benchmarks/harbor-buzz-orchestra/scripts/: benchmark.py  run_leaderboard.py
benchmarks/harbor-buzz-orchestra/src/harbor_buzz_orchestra/: __init__.py  agent.py  container_runtime.py  manifest.py  provisioning.py  runtime.py
benchmarks/harbor-buzz-orchestra/testbed/: compose.benchmark.yml  pyproject.toml
benchmarks/harbor-buzz-orchestra/testbed/endpoints/: README.md  anthropic-live.json  m1-local.json
benchmarks/harbor-buzz-orchestra/testbed/sql/: benchmark_schema.sql
benchmarks/harbor-buzz-orchestra/testbed/src/harbor_buzz_testbed/: __init__.py  buzz_cli.py  keys.py  provisioner.py
benchmarks/harbor-buzz-orchestra/testbed/tests/: conftest.py  test_benchmark.py  test_keys.py  test_provisioner_live.py  test_provisioner_unit.py
benchmarks/harbor-buzz-orchestra/tests/: conftest.py  test_agent.py  test_container_runtime.py  test_manifest.py  test_run_leaderboard.py
crates/buzz-acp/: Cargo.toml
crates/buzz-acp/src/: base_prompt.md  config.rs  lib.rs  relay.rs  setup_mode.rs
crates/buzz-admin/: Cargo.toml
crates/buzz-admin/src/: main.rs
crates/buzz-agent/src/: lib.rs  mcp.rs
crates/buzz-cli/src/: lib.rs
crates/buzz-core/src/: kind.rs
crates/buzz-db/src/: event.rs  lib.rs  migration.rs  reaction.rs  replica_fence.rs
crates/buzz-dev-mcp/: Cargo.toml
crates/buzz-dev-mcp/src/: lib.rs  shell.rs  shim.rs
crates/buzz-media/: Cargo.toml
crates/buzz-media/src/: config.rs  lib.rs  storage.rs  upload.rs  upload_record.rs  validation.rs
crates/buzz-media/tests/: static_creds_minio.rs
crates/buzz-relay/: Cargo.toml
crates/buzz-relay/src/: config.rs  main.rs  nip11.rs  router.rs  state.rs
crates/buzz-relay/src/api/: bridge.rs  invites.rs  media.rs  mod.rs
crates/buzz-relay/src/api/git/: cas_publish.rs  hydrate.rs  store.rs  transport.rs
crates/buzz-relay/src/handlers/: auth.rs  event.rs  ingest.rs
crates/buzz-sdk/src/: builders.rs
crates/buzz-test-client/tests/: e2e_event_reminder.rs  e2e_managed_agent.rs  e2e_media_extended.rs  e2e_media_video.rs  e2e_mesh_llm.rs  e2e_nostr_interop.rs  e2e_persona.rs  e2e_relay.rs  e2e_team.rs
crates/sprout-acp/src/: acp.rs  pool.rs
crates/sprout-agent/: Cargo.toml  README.md
crates/sprout-agent/src/: config.rs  llm.rs
crates/sprout-cli/: README.md  TESTING.md
crates/sprout-cli/src/: lib.rs  validate.rs
crates/sprout-core/src/: kind.rs
crates/sprout-relay/: Cargo.toml
crates/sprout-relay/src/: config.rs  state.rs
crates/sprout-sdk/src/: builders.rs
deploy/charts/buzz/: Chart.yaml  values.yaml
desktop/: package.json  playwright.config.ts  playwright.perf.config.ts  test-loader-hooks.mjs  test-loader.mjs
desktop/scripts/: check-file-sizes.mjs
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/examples/: pocket_quality_ab.rs
desktop/src-tauri/src/: events.rs  lib.rs  migration.rs  migration_sync_guard_tests.rs  migration_team_dir_tests.rs  migration_team_events_tests.rs  migration_test_support.rs  migration_tests.rs  models.rs  nostr_convert.rs  relay.rs  secret_store.rs  util.rs
desktop/src-tauri/src/archive/: mod.rs  pipeline.rs  store.rs
desktop/src-tauri/src/commands/: agent_discovery.rs  agent_metric_archive.rs  agent_models.rs  agent_settings.rs  agents.rs  channels.rs  export_util.rs  media.rs  media_download.rs  mesh_llm.rs  messages.rs  mod.rs  personas.rs  profile.rs  project_git.rs  project_git_branches.rs  project_git_diff.rs  project_git_exec.rs  project_git_workflow.rs  project_repo_paths.rs  project_terminal.rs  teams.rs  window_chrome.rs
desktop/src-tauri/src/commands/personas/: inbound_tests.rs  mod.rs  snapshot.rs  writeback.rs
desktop/src-tauri/src/commands/personas/snapshot/: import.rs  tests.rs
desktop/src-tauri/src/huddle/: mod.rs  models.rs  pipeline.rs  pocket.rs  stt.rs  tts.rs  tts_tests.rs
desktop/src-tauri/src/managed_agents/: agent_events.rs  agent_snapshot.rs  discovery.rs  git_bash.rs  mod.rs  nest.rs  persona_events.rs  personas.rs  process_lifecycle.rs  readiness.rs  repos.rs  restore.rs  retention.rs  runtime.rs  storage.rs  team_events.rs  team_repair.rs  teams.rs  types.rs
desktop/src-tauri/src/managed_agents/config_bridge/: codex.rs  goose.rs  reader.rs  reader_tests.rs  types.rs
desktop/src-tauri/src/managed_agents/personas/: tests.rs
desktop/src-tauri/src/managed_agents/runtime/: tests.rs
desktop/src-tauri/src/mesh_llm/: discovery.rs  mod.rs
desktop/src-tauri/src/nostr_convert/: user_search.rs
desktop/src-tauri/src/templates/: storage.rs
desktop/src/app/: App.tsx  AppShell.helpers.ts  AppShell.tsx  AppShellContext.tsx  AppTopChrome.tsx  routeTree.gen.ts  routes.ts  useAppShellLifecycleEffects.ts  useTauriWindowDrag.ts  useWebviewZoomShortcuts.ts
desktop/src/testing/: e2eBridge.ts
desktop/tests/e2e/: agent-lifecycle-feedback.spec.ts  agent-readiness-screenshots.spec.ts  agent-snapshot-recipient.spec.ts  agent-snapshot-send.spec.ts  agents.spec.ts  animated-avatar.spec.ts  channel-browser.spec.ts  channel-controls-screenshots.spec.ts  (+40 more)
docs/: mesh-llm-local-build.md
docs/nips/: NIP-AP.md  NIP-DV.md  NIP-RS.md
migrations/: 0003_event_reminders.sql  0017_product_feedback.sql  0021_created_at_fence_floor.sql
mobile/: CHANGELOG.md  pubspec.yaml
patches/: virtua@0.49.3.patch
schema/: schema.sql
scripts/: attach-schema-partitions.sql  grab-emoji.sh  start-relay-for-tests.sh
(+457 files in other folders)
