[project]
name = "harbor-buzz-orchestra"
version = "0.1.0"
description = "Harbor custom agent for Buzz-coordinated multi-agent benchmarks"
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.16.1,<0.18",
    "pydantic>=2.11",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88
