[package]
name = "buzz-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI for Buzz relay administration"

[[bin]]
name = "buzz-admin"
path = "src/main.rs"

[dependencies]
buzz-db = { workspace = true }
buzz-core = { workspace = true }
buzz-auth = { workspace = true }
buzz-pubsub = { workspace = true }
buzz-search = { workspace = true }
buzz-audit = { workspace = true }
buzz-workflow = { workspace = true }
buzz-media = { workspace = true }
nostr = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
deadpool-redis = { workspace = true }
# Redis TLS (rediss://, e.g. ElastiCache) uses rustls, which needs a process
# CryptoProvider installed at startup. The workspace redis TLS feature compiles
# both aws-lc-rs and ring in transitively, so rustls can't auto-select one — we
# install ring explicitly in main(). Mirrors buzz-relay's setup.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tracing = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
clap = { version = "4", features = ["derive"] }
