[project]
name = "harbor-buzz-testbed"
version = "0.1.0"
description = "Trial provisioning and local Buzz stack tooling for harbor-buzz-orchestra"
requires-python = ">=3.12"
dependencies = [
    "harbor-buzz-orchestra",
    "coincurve>=20",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.15",
]

[tool.uv.sources]
harbor-buzz-orchestra = { path = "..", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
